test PWM with elapsed function

--- a/self_balance_robot/self_balance_robot/self_balance_robot.vcxproj.filters
+++ b/self_balance_robot/self_balance_robot/self_balance_robot.vcxproj.filters
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="self_balance_robot.ino" />
+    <None Include="I2C.ino" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.self_balance_robot.vsarduino.h">
